🐛 [UI] fixed launching post-process actions with locked entities